Changes in the abstract

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -134,3 +134,10 @@
 	year = {2009},
 	keywords = {Production management}
 }
+
+@article{boissard_applications_2012,
+	title = {Applications and uses of digital filters in finance},
+	journal = {Master of Science in Management, Technology and Economics. Swiss, Zurich, Department of Management, Technology and Economics, Swiss Federal Institute of Technology},
+	author = {Boissard, Johan},
+	year = {2012}
+}
